--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 isoi juttui tulos
+jos omistat hupsut tunnukset niin pelaa hupsua peliä tästä: <a href="https://oispa.sampoamis.fi/auth/oidc/login?provider=auth0">OispaSampoo</a>
