--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>isoi juttui tulos</h1>
-jos omistat hupsut tunnukset niin pelaa hupsua peliä tästä: <a href="https://oispa.sampoamis.fi/auth/oidc/login?provider=auth0">OispaSampoo</a>
-<br<br>
-sampoamis.fi on opiskelijaprojekti, sampoamis.fi ei ole Saimaan ammattiopisto Sampon / Etelä-Karjalan koulutuskuntayhtymän virallinen verkkopalvelu.<br>
+<p>jos omistat hupsut tunnukset niin pelaa hupsua peliä tästä: <a href="https://oispa.sampoamis.fi/auth/oidc/login?provider=auth0">OispaSampoo</a></p>
+<br><br>
+<p>sampoamis.fi on opiskelijaprojekti, sampoamis.fi ei ole Saimaan ammattiopisto Sampon / Etelä-Karjalan koulutuskuntayhtymän virallinen verkkopalvelu.</p>
+<br>
 <a href="tietosuojaseloste.pdf">Tietosuojaseloste</a>
