--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>isoi juttui tulos</h1>
-<p>jos omistat hupsut tunnukset niin pelaa hupsua peliä tästä: <a href="https://oispa.sampoamis.fi/auth/oidc/login?provider=auth0">OispaSampoo</a></p>
+<p>jos omistat hupsut tunnukset niin pelaa hupsua peliä tästä: <b><a href="https://oispa.sampoamis.fi/auth/oidc/login?provider=auth0">OispaSampoo</a></b></p>
+<p><b>ota yhteyttä</b>: sähköpostitse <a href="mailto:sampolabra@everia.fi">sampolabra@everia.fi</p>
 <br><br>
-<p>sampoamis.fi on opiskelijaprojekti, sampoamis.fi ei ole Saimaan ammattiopisto Sampon / Etelä-Karjalan koulutuskuntayhtymän virallinen verkkopalvelu.</p>
+<p>sampoamis.fi on opiskelijaprojekti, sampoamis.fi <b>ei ole Saimaan ammattiopisto Sampon</b> / Etelä-Karjalan koulutuskuntayhtymän <b>virallinen verkkopalvelu.</b></p>
 <br>
-<a href="tietosuojaseloste.pdf">Tietosuojaseloste</a>
+<a href="tietosuojaseloste.pdf">Tietosuojaseloste</a> ~~ <a href="https://github.com/sampoamis">GitHub</a>
