--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>isoi juttui tulos</h1>
 <p>jos omistat hupsut tunnukset niin pelaa hupsua peliä tästä: <b><a href="https://oispa.sampoamis.fi/auth/oidc/login?provider=auth0">OispaSampoo</a></b></p>
-<p><b>ota yhteyttä</b>: sähköpostitse <a href="mailto:sampolabra@everia.fi">sampolabra@everia.fi</p>
+<p><b>ota yhteyttä</b>: sähköpostitse <a href="mailto:sampolabra@everia.fi">sampolabra@everia.fi</a></p>
 <br><br>
 <p>sampoamis.fi on opiskelijaprojekti, sampoamis.fi <b>ei ole Saimaan ammattiopisto Sampon</b> / Etelä-Karjalan koulutuskuntayhtymän <b>virallinen verkkopalvelu.</b></p>
 <br>
