--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 <br><br>
 <p>sampoamis.fi on opiskelijaprojekti, sampoamis.fi <b>ei ole Saimaan ammattiopisto Sampon</b> / Etelä-Karjalan koulutuskuntayhtymän <b>virallinen verkkopalvelu.</b></p>
 <br>
-<a href="tietosuojaseloste.pdf">Tietosuojaseloste</a> ~~ <a href="https://github.com/sampoamis">GitHub</a>
+<a href="tietosuojaseloste.pdf">Tietosuojaseloste</a> ~~ <a href="https://github.com/sampoamis">GitHub</a> ~~ <a href="https://tiktok.com/@sampotivi">TikTok</a> ~~ <a href="https://youtube.com/@sampotechtips">YouTube</a>
